--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,6 +9,7 @@ $--color-grey: #F2EDED;
 $--color-light-primary: #E5E5E5;
 $--color-danger: #ED0F0F;
 $--color-success: #05C953;
+$--color-dark-primary: #94C0F9;
 /* Button Variables */
 $--btn-primary: #5AA2F0;
 $--btn-secondary: #E9922C;
