--- a/scss/mainsection/_main-profile.scss
+++ b/scss/mainsection/_main-profile.scss
@@ -13,7 +13,7 @@
         border-right: 1px solid $--color-grey;
         position: absolute;
         right: 0;
-        height: calc(100vh - 136px);
+        height: 100vh;
         top: -20px;
       }
     }
