--- a/scss/mainsection/_main-section.scss
+++ b/scss/mainsection/_main-section.scss
@@ -9,9 +9,8 @@
   /*margin right 20px adjusted in calculated width*/
   margin-right: 20px;
   margin-bottom: 20px;
-  min-height: 100%;
+  min-height: calc(100% - 20px);
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
-  overflow-y: auto;
 
   .content {
     &-head {
@@ -37,8 +36,9 @@
     }
 
     &-body {
-      position: relative;
       padding: 20px 15px;
+      position: relative;
+      overflow: hidden;
 
       &--aside {
         position: absolute;
